bronze layer