@@ -8,6 +8,13 @@ COPY pyproject.toml .python-version ./
 
 RUN uv sync --no-cache
 
+RUN /app/.venv/bin/python -c "\
+import urllib.request; \
+urllib.request.urlretrieve(\
+'https://repo1.maven.org/maven2/org/mariadb/jdbc/mariadb-java-client/3.4.1/mariadb-java-client-3.4.1.jar',\
+'/app/mariadb-connector.jar')"
+
+ENV JDK_JAVA_OPTIONS="--add-modules=jdk.incubator.vector"
 ENV PATH="/app/.venv/bin:$PATH"
 ENV PYSPARK_PYTHON=/app/.venv/bin/python
 ENV PYSPARK_DRIVER_PYTHON=/app/.venv/bin/python
